--- a/arch/x86/boot/Makefile
+++ b/arch/x86/boot/Makefile
@@ -79,7 +79,7 @@ cmd_image = $(obj)/tools/build $(obj)/setup.bin $(obj)/vmlinux.bin \
 			       $(obj)/zoffset.h $@ $($(quiet)redirect_image)
 
 $(obj)/bzImage: $(obj)/setup.bin $(obj)/vmlinux.bin $(obj)/tools/build FORCE
-	$(call if_changed,image)
+	$(call if_changed,image) ==> run command "cmd_image", see generated .bzImage.cmd
 	@$(kecho) 'Kernel: $@ is ready' ' (#'`cat .version`')'
 
 OBJCOPYFLAGS_vmlinux.bin := -O binary -R .note -R .comment -S
